# theta3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: build_docs.cmake  common_deps.cmake  copy_dlls.cmake  platform_macos.cmake  platform_vita.cmake  platform_windows.cmake
data/: gun.aseprite  plan.txt  spr_mob1_policeman.aseprite  witch_run.aseprite
data/anim/: adult_enemy_attack.atl  adult_enemy_attack.json  adult_enemy_run.atl  anm_witch_atk_R.atl  anm_witch_atk_R.json  anm_witch_attack_cmb_1.atl  anm_witch_attack_cmb_1.json  anm_witch_attack_cmb_2.atl  anm_witch_attack_cmb_2.json  anm_witch_attack_cmb_3.atl  anm_witch_attack_cmb_3.json  coin.atl  coin.json  effects_fog.atl  effects_fog.json  effects_rain.atl  effects_rain.json  gun_shotgun.atl  gun_shotgun.json  witch_attack.atl  witch_attack.json  witch_broom_activation.atl  witch_broom_activation.json  witch_broom_move.atl  witch_broom_move.json  witch_idle.atl  witch_idle.json  witch_run.atl  witch_run.json
data/font/: comic.fnt  monogram.fnt
data/map/: main.ldtk  tile-map_grassUNDsand.aseprite
data/map/world/: world.ldtk
data/param/: skills.json
data/script/: test.lua
data/shader/: 3d.fs  3d.vs  box.fs  button.fs  button.vs  circle.fs  circle.vs  default.fs  flame.fs  flame.vs  light.vs  lit.fs  particle.fs  particle.vs  uber.fs  uber.vs
data/sprites/TILE MAP/: sakiew.aseprite
data/sprites/normal_human/: normal_human_GIGAPUNCH.aseprite  normal_human_base.aseprite  normal_human_death.aseprite  normal_human_move.aseprite  normal_human_move.json
data/sprites/player/: witch_attack.aseprite  witch_base.aseprite  witch_broom_activation.aseprite  witch_broom_base.aseprite  witch_broom_move.aseprite  witch_idle.aseprite  witch_run.aseprite
docs/: Doxyfile.in
src/: main.cpp  main.h
src/components/: animator.cpp  animator.h  bullet_manager.cpp  bullet_manager.h  collider.h  dmg_popup.h  effects.cpp  effects.h  enemy.cpp  enemy.h  enemy_adult.cpp  enemy_adult.h  enemy_bullet.cpp  enemy_bullet.h  enemy_child.cpp  enemy_child.h  enemy_fatass.cpp  enemy_fatass.h  enemy_policeman.cpp  enemy_policeman.h  enemy_soldier.cpp  enemy_soldier.h  flashlight.cpp  flashlight.h  gun.cpp  gun.h  gun_type.h  light.cpp  light.h  map.h  map2.h  money.h  movement.cpp  movement.h  particle_system.h  player.cpp  player.h  sprite.cpp  sprite.h  text_popup.cpp  (+3 more)
src/components/bullets/: bullet.cpp  bullet.h
src/components/pickups/: Inventory.h  ammo_pickup.cpp  ammo_pickup.h  crossbow_ammo_pickup.cpp  crossbow_ammo_pickup.h  inventory.cpp  machine_ammo_pickup.cpp  machine_ammo_pickup.h  medpack_pickup.cpp  medpack_pickup.h  pickup_manager.h  pickupable.cpp  pickupable.h  shotgun_ammo_pickup.cpp  shotgun_ammo_pickup.h
src/components/skills/: skill_spinner.h
src/components/ui/: ui_button.h  ui_coin_display.h  ui_combo_display.h  ui_hp_bar.h  ui_weapon.h
src/components/ui/shop/: ui_shop_card.h
src/core/: asset.cpp  asset.h  audio.cpp  audio.h  ecs.cpp  ecs.h  game.cpp  game.h  game_state.h  input.cpp  input.h  log.cpp  log.h  mem_alloc_override.cpp  network.cpp  network.h  opengl.cpp  opengl.h  random.h  resource.h  routine.h  types.h  uuid.cpp  uuid.h  window.cpp  window.h
src/core/file/: atl.h
src/lib/: glad.c
src/lib/a-star-master/: AStar.cpp  AStar.hpp
src/lib/glad/: glad.h
src/lib/igfiledialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
src/lib/imgui/: imgui.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.h
src/render/: Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  buffer.h  device.cpp  device.h  font.cpp  font.h  light_system.cpp  light_system.h  subtexture.cpp  subtexture.h  target.cpp  target.h  texture.cpp  texture.h
src/scenes/: game_scene.cpp  game_scene.h  map.h  scene_3d_test.cpp  scene_3d_test.h  scene_game.cpp  scene_game.h  scene_light_test.cpp  scene_light_test.h  scene_menu.cpp  scene_menu.h  scene_shop_test.cpp  scene_shop_test.h  scene_title.cpp  scene_title.h
src/shaders/: shader1.cpp
src/system/: render_system.cpp  render_system.h  script_system.cpp  script_system.h
src/tools/: tool.h  tool_anim.h  viewport.h
src/tools/pak/: pak_format.cpp  pak_format.h  paker.h  vfs.cpp  vfs.h
src/utils/: file.h  imgui.h  profiler.h
tools/vfs/: CMakeLists.txt
tools/vfs/src/: types.h  vfs.h  vfsFile.c
tools/vfs/src/pak/: pak_format.c  pak_format.h
